infrastructure/galasa-kube1/galasa-development/github-webhook-receiver/github-webhook-receiver-ingress.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-webhook-receiver
  namespace: galasa-development
    
spec:
  ingressClassName: public-iks-k8s-nginx
  tls:
  - hosts:
    # - development.galasa.dev
    - development.galasa-kube1-d2e8765deb38dddd0aa1b649462cf87f-0000.eu-gb.containers.appdomain.cloud
    secretName: devgalasa-tls-secret
  rules:
  # - host: development.galasa.dev
  - host: development.galasa-kube1-d2e8765deb38dddd0aa1b649462cf87f-0000.eu-gb.containers.appdomain.cloud
    http:
      paths:
      - backend:
          service:
            name: github-webhook-receiver
            port:
              number: 80
        path: /github-webhook-receiver
        pathType: Prefix
